tests/snapshots/cmd_generate_edge_cases__generate_no_check_flag.snap
---
source: tests/cmd_generate_edge_cases.rs
expression: output
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
