tests/snapshots/cmd_generate_edge_cases__lockfile_with_comments.snap
---
source: tests/cmd_generate_edge_cases.rs
expression: output
---
exit_code: 0
---stderr---
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
       Wrote .github/workflows/ghat_check.yaml
    Finished generated 2 workflows in [TIME]
