tests/snapshots/cmd_generate_edge_cases__special_chars_in_job_name.snap
---
source: tests/cmd_generate_edge_cases.rs
expression: p.generate_snapshot(&output)
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_ci.yaml
    Finished generated 1 workflow in [TIME]
--- .github/ghat/workflows/ci.ts ---
workflow("CI", {
  on: triggers({ push: ["main"] }),
  jobs(ctx) {
    const build = ctx.job("Build & Test (Linux)", {
      runs_on: "ubuntu-latest",
      steps() {
        run("cargo build")
        return { result: "ok" }
      }
    })
    ctx.job("Deploy [Staging]", {
      runs_on: "ubuntu-latest",
      needs: [build],
      steps(ctx) {
        run(`echo ${ctx.needs.build__test_linux.outputs.result}`)
      }
    })
  }
})
--- .github/workflows/generated_ci.yaml ---
# Do not edit: this file is generated by `ghat generate`.
name: CI
on:
  push:
    branches:
    - main
jobs:
  build__test_linux:
    name: Build & Test (Linux)
    runs-on: ubuntu-latest
    outputs:
      result: ok
    steps:
    - id: step_0
      run: cargo build
  deploy_staging:
    name: Deploy [Staging]
    runs-on: ubuntu-latest
    needs:
    - build__test_linux
    steps:
    - id: step_0
      run: echo ${{ needs.build__test_linux.outputs.result }}
