tests/snapshots/cmd_generate_edge_cases__workflow_no_jobs.snap
---
source: tests/cmd_generate_edge_cases.rs
expression: output
---
exit_code: 0
---stderr---
    Checking workflow definitions
  Evaluating workflow definitions
       Wrote .github/workflows/generated_empty.yaml
    Finished generated 1 workflow in [TIME]
